[tool.poetry]
name = "time-vault"
version = "0.1.0"
description = ""
authors = ["Christian Grossmüller <chgad.games@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
